# X

./: .gitignore  Cargo.toml  cov.profdata  cov.profraw  main  test.sh
coverage/: index.html
crates/FOL/: Cargo.toml  readme.md
crates/FOL/docs/Internals/: Quantifiers.md
crates/FOL/src/: lib.rs  primitives.rs
crates/FOL/src/formula/: mod.rs  tree.rs
crates/FOL/src/semantics/: elements.rs  graph.rs  mod.rs
crates/FOL/src/semantics/assertions/: implies.rs
crates/FOL/src/semantics/functions/: function_implementation.rs
crates/FOL/src/semantics/predicates/: __disjunction.rs  conjunction.rs  implies.rs  linked_predicate.rs  negation.rs  predicate_implementation.rs  true_for_arguments.rs  undetermined.rs  universally_obeyed.rs
crates/FOL/src/syntax/: grammar.rs  mod.rs
crates/FOL/src/syntax/grammar/atomic/: equality.rs  predicate_call.rs
crates/FOL/src/syntax/grammar/formula/: biconditional.rs  conjunction.rs  disjunction.rs  existential.rs  implication.rs  negation.rs  universal.rs
crates/FOL/src/syntax/grammar/terms/: constant.rs  function_call.rs  variable.rs
crates/FOL/src/syntax/normal_forms/: clause.rs  mod.rs  prenex.rs  skolem.rs
crates/FOL/src/syntax/utils/: mod.rs  variable_broker.rs
crates/FOL/tests/: test_general.rs
crates/SOLaR_BT/: Cargo.toml  cov.profraw  default.profraw  readme.md
crates/ZSFT/: Cargo.toml
crates/language/: Cargo.toml  readme.md
crates/lazymath/: Cargo.toml
crates/rc_wrap/: Cargo.toml  readme.md
docs/: grammer_.ebnf  lang_grammer.ebnf  syntax.md
editor/: package.json
src/: main.rs
src/algo/: mod.rs
(+201 files in other folders)
