[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features=["macros"] }
regex = "1"
onig = {version = "6"}
lazy_static = "1.4.0"
fancy-regex = "0.8.0"
handlebars = "4.2.2"
serde_json = "1.0.59"
log = "0.4"